<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">贝克街42号</string>
    <string name="title_activity_main_tab">回到三国之前传</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_resetgame">重置游戏</string>

    <string name="main_map">地图</string>
    <string name="main_life">续命</string>
    <string name="main_cut">刀伤</string>
    <string name="main_chain">锁链</string>
    <string name="main_puzzle">四象</string>
    <string name="main_msg">消息</string>



</resources>
