<?xml version="1.0" encoding="utf-8"?>
<TabHost 
    android:id="@android:id/tabhost" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical" 
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent">
        <FrameLayout
            android:id="@android:id/tabcontent" 
            android:layout_width="fill_parent" 
            android:layout_height="0.0dip"
            android:layout_weight="1.0" />
        <TabWidget
            android:id="@android:id/tabs" 
            android:visibility="gone" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:layout_weight="0.0" />
        <RadioGroup
		android:id="@+id/main_radiogroup"
		android:gravity="center_vertical"
		android:layout_gravity="bottom" 
		android:orientation="horizontal"
		android:paddingBottom="2dip"
		android:paddingTop="8dp"
		android:background="@drawable/mmfooter_bg"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
			<RadioButton 
			    android:id="@+id/main_tab_map"
				android:checked="false"
				android:text="@string/main_map"
				android:drawableTop="@drawable/tab_map"
			    android:textColor="@color/tab_text"
				android:layout_marginTop="4dp"
			    style="@style/MMTabButton" android:layout_height="wrap_content"/>
			<!--android:layout_marginTop="8dp"-->
		 	<RadioButton
                android:id="@+id/main_tab_life"
                android:text="@string/main_life"
                android:drawableTop="@drawable/tab_life"
                android:textColor="@color/tab_text"
                style="@style/MMTabButton" android:checked="false"/>
		 	<RadioButton
		 	    android:id="@+id/main_tab_cut"
		 	    android:text="@string/main_cut"
		 	    android:drawableTop="@drawable/tab_cut"
		 	    android:textColor="@color/tab_text" 
		 	    style="@style/MMTabButton" android:checked="false"/>
		 	<RadioButton
		 	    android:id="@+id/main_tab_chain"
		 	    android:text="@string/main_chain"
		 	    android:drawableTop="@drawable/tab_chain"
		 	    android:textColor="@color/tab_text"
		 	    style="@style/MMTabButton" android:checked="false"/>
			<RadioButton
					android:id="@+id/main_tab_paint"
					android:text="@string/main_puzzle"
					android:drawableTop="@drawable/tab_paint"
					android:textColor="@color/tab_text"
					style="@style/MMTabButton" android:checked="false"/>
			<RadioButton
				android:id="@+id/main_tab_msg"
				android:text="@string/main_msg"
				android:drawableTop="@drawable/tab_hint"
				android:textColor="@color/tab_text"
				style="@style/MMTabButton" android:checked="true"/>
		</RadioGroup>
    </LinearLayout>
</TabHost>
